# OptiX7-Spectral-Path-Tracer

./: README.md
models/eggtest/: eggtest.mtl
optix7course-master/: CMakeLists.txt
optix7course-master/common/gdt/cmake/: FindOptiX.cmake
optix7course-master/common/glfWindow/: CMakeLists.txt  GLFWindow.cpp  GLFWindow.h
optix7course-master/example10_softShadows/: CMakeLists.txt  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  TriangleData.cuh  color.cuh  devicePrograms.cu  example10_softShadows.rar  main.cpp  myString.cuh  myVector.cuh  re.cuh
